# rocket-yew-starter-pack

./: .gitignore  Cargo.toml  README.md  build.sh  run-local.sh  simulate-prod.sh  static-binary.sh
server/: .container-script.sh  .gitignore  Cargo.toml
server/src/: main.rs
ui/: Cargo.toml  Web.toml
ui/src/: backend.rs  lib.rs  main.rs
