[package]
name = "server"
version = "0.1.0"
authors = ["Coleman McFarland <coleman.mcfarland@gmail.com>"]

[dependencies]
bincode = "*"
sled = "*" 
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"
serde_derive = "*"
serde_json = "*"
serde = "*"
tempdir = "*"

[dependencies.maud]
branch = "master"
features = ["rocket"]
git = "https://github.com/lfairy/maud.git"
