[package]
name = "server"
version = "0.2.0"
authors = ["Coleman McFarland <coleman.mcfarland@gmail.com>"]

[dependencies]
bincode = "1.0.1"
sled = "0.15.17" 
rocket = "0.4.0"
rocket_codegen = "0.4.0"
rocket_contrib = "0.4.0"
serde_derive = "1.0.70"
serde_json = "1.0.24"
serde = "1.0.70"
tempdir = "0.3.7"

[dependencies.maud]
branch = "master"
features = ["rocket"]
git = "https://github.com/lfairy/maud.git"
