[package]
name = "server"
version = "0.2.1"
authors = ["Coleman McFarland <coleman.mcfarland@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.1.4"
sled = "0.15.17" 
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = "0.4.2"
serde_derive = "1.0.98"
serde_json = "1.0.40"
serde = "1.0.98"
tempdir = "0.3.7"

[dependencies.maud]
features = ["rocket"]
version = "0.21.0"