[package]
name = "ui"
version = "0.1.0"
authors = ["Coleman McFarland <coleman.mcfarland@gmail.com>"]


[dependencies]
strum = "0.8.0"
strum_macros = "0.8.0"
serde = "1"
serde_derive = "1"
serde_json = "*"
yew = { git = "https://github.com/DenisKolodin/yew.git", branch = "master" }  
stdweb = "0.3"

# We used to need this
#[replace]
#"iovec:0.1.1" = { git = 'https://github.com/machineloop/iovec', branch = 'wasm-support' }

[[bin]]
name = "ui"
path = "src/main.rs"
crate-type = ["bin", "proc-macro"]
